@@ -2,7 +2,7 @@
 #' 
 #' Function to set mapping bias for each variant in the provided
 #' \code{CollapsedVCF} object. By default, it returns the same value for all
-#' variants, but a pool of normal samples can be provided for position-specific
+#' variants, but a mapping bias file can be provided for position-specific
 #' mapping bias calculation.
 #' 
 #' 
@@ -10,16 +10,16 @@
 #' function from the VariantAnnotation package.
 #' @param tumor.id.in.vcf Id of tumor in case multiple samples are stored in
 #' VCF.
-#' @param normal.panel.vcf.file Combined VCF file of a panel of normals,
+#' @param mapping.bias.file A precomputed mapping bias database 
+#' obtained by \code{\link{calculateMappingBiasVcf}}.
+#' @param normal.panel.vcf.file Deprecated, use \code{mapping.bias.file}
+#' instead.
 #' reference and alt counts as AD genotype field. Should be compressed and
-#' indexed with bgzip and tabix, respectively. One can provide a precomputed
-#' mapping bias database 
-#' (obtained by \code{\link{calculateMappingBiasVcf}}).
-#' @param min.normals Minimum number of normals with heterozygous SNP for
+#' @param min.normals Deprecated. Minimum number of normals with heterozygous SNP for
 #' calculating position-specific mapping bias. Requires
 #' \code{normal.panel.vcf.file}.
 #' @param smooth Impute mapping bias of variants not found in the panel by
-#' smoothing of neighboring SNPs. Requires \code{normal.panel.vcf.file}.
+#' smoothing of neighboring SNPs. Requires \code{mapping.bias.file}.
 #' @param smooth.n Number of neighboring variants used for smoothing.
 #' @return A \code{data.frame} with elements \item{bias}{A \code{numeric(nrow(vcf))} 
 #' vector with the mapping bias of for each
@@ -27,7 +27,7 @@
 #' factor. Adjusted allelic fraction is (observed allelic fraction)/(mapping
 #' bias). Maximum scaling factor is 1 and means no bias.}
 #' \item{pon.count}{A \code{numeric(nrow(vcf))} vector with the number
-#' of hits in the \code{normal.panel.vcf.file}.}
+#' of hits in the \code{mapping.bias.file}.}
 #' \item{shape1, shape2}{Fit of a beta distribution.}
 #' @author Markus Riester
 #' @examples
@@ -39,13 +39,17 @@
 #' vcf.bias <- setMappingBiasVcf(vcf)        
 #' 
 #' @export setMappingBiasVcf
-setMappingBiasVcf <- function(vcf, tumor.id.in.vcf = NULL,
+setMappingBiasVcf <- function(vcf, tumor.id.in.vcf = NULL, mapping.bias.file = NULL,
 normal.panel.vcf.file = NULL, min.normals = 2, smooth = TRUE, smooth.n = 5) {
-
+    # TODO: remove in 1.20, defunct in 1.18    
+    if (!is.null(normal.panel.vcf.file) && is.null(mapping.bias.file)) {
+        flog.warn("normal.panel.vcf.file is deprecated, use mapping.bias.file instead.")
+        mapping.bias.file <- normal.panel.vcf.file
+        if (min.normals < 2) .stopUserError("min.normals must be >=2.")
+    }    
     if (is.null(tumor.id.in.vcf)) {
         tumor.id.in.vcf <- .getTumorIdInVcf(vcf)
     }
-    if (min.normals < 2) .stopUserError("min.normals must be >=2.")
 
     mappingBias <- 1
     if (!is.null(info(vcf)$SOMATIC) && ncol(vcf) > 1) {
@@ -55,10 +59,10 @@ normal.panel.vcf.file = NULL, min.normals = 2, smooth = TRUE, smooth.n = 5) {
          flog.info("Found SOMATIC annotation in VCF. Setting mapping bias to %.3f.",
             mappingBias)
     }
-    if (is.null(info(vcf)$SOMATIC) && is.null(normal.panel.vcf.file)) {
+    if (is.null(info(vcf)$SOMATIC) && is.null(mapping.bias.file)) {
         flog.info(
             "VCF does not contain somatic status. For best results, consider%s%s",
-            " providing normal.panel.vcf.file when matched normals are not ",
+            " providing mapping.bias.file when matched normals are not ",
             "available.")
     }
     tmp <- rep(mappingBias, nrow(vcf))
@@ -67,16 +71,17 @@ normal.panel.vcf.file = NULL, min.normals = 2, smooth = TRUE, smooth.n = 5) {
     # a lower mappability than the alt allele.
     max.bias <- 1.2
     tmp[tmp > max.bias] <- max.bias
-    if (is.null(normal.panel.vcf.file)) {
+    if (is.null(mapping.bias.file)) {
         return(data.frame(bias = tmp, shape1 = NA, shape2 = NA))
     }
 
-    if (file_ext(normal.panel.vcf.file) == "rds") {
-        mappingBias <- readRDS(normal.panel.vcf.file)
+    if (file_ext(mapping.bias.file) == "rds") {
+        mappingBias <- readRDS(mapping.bias.file)
     } else {
-        nvcf <- .readNormalPanelVcfLarge(vcf, normal.panel.vcf.file)
+        flog.warn("Providing a VCF file via mapping.bias.file is deprecated. Pre-compute mapping bias.")
+        nvcf <- .readNormalPanelVcfLarge(vcf, mapping.bias.file)
         if (nrow(nvcf) < 1) {
-            flog.warn("setMappingBiasVcf: no hits in %s.", normal.panel.vcf.file)
+            flog.warn("setMappingBiasVcf: no hits in %s.", mapping.bias.file)
             return(data.frame(bias = tmp, mu = NA, rho = NA))
         }
         mappingBias <- .calculateMappingBias(nvcf, min.normals)
@@ -121,89 +126,3 @@ normal.panel.vcf.file = NULL, min.normals = 2, smooth = TRUE, smooth.n = 5) {
                 mu = mu, rho = rho))
 }
     
-.calculateMappingBias <- function(nvcf, min.normals, min.normals.betafit = 7,
-                                  min.median.coverage.betafit = 5) {
-    if (ncol(nvcf) < 2) {
-        .stopUserError("The normal.panel.vcf.file contains only a single sample.")
-    }
-    # TODO: deal with tri-allelic sites
-    alt <- apply(geno(nvcf)$AD, c(1,2), function(x) x[[1]][2])
-    ref <- apply(geno(nvcf)$AD, c(1,2), function(x) x[[1]][1])
-    fa  <- apply(geno(nvcf)$AD, c(1,2), function(x) x[[1]][2]/sum(x[[1]]))
-    x <- sapply(seq_len(nrow(nvcf)), function(i) {
-        idx <- !is.na(fa[i,]) & fa[i,] > 0.05 & fa[i,] < 0.9
-        shapes <- c(NA, NA)
-        if (!sum(idx) >= min.normals) return(c(0, 0, 0, 0, shapes))
-        dp <- alt[i,] + ref[i,] 
-        mdp <- median(dp, na.rm = TRUE)   
-
-        if (sum(idx) >= min.normals.betafit && mdp >= min.median.coverage.betafit) {
-            fit <- suppressWarnings(try(vglm(cbind(alt[i,idx], 
-                ref[i,idx]) ~ 1, betabinomial, trace = FALSE)))
-            if (class(fit) == "try-error") {
-                flog.warn("Could not fit beta binomial dist for %s (%s).",
-                    as.character(rowRanges(nvcf[i])),
-                    paste0(round(fa[i, idx], digits = 3), collapse=","))
-            } else {    
-                shapes <- Coef(fit)
-            }
-        }
-        c(sum(ref[i,idx]), sum(alt[i,idx]), sum(idx), mean(fa[i, idx]), shapes)
-    })
-    # Add an average "normal" SNP (average coverage and allelic fraction > 0.4)
-    # as empirical prior
-    psMappingBias <- .adjustEmpBayes(x[1:4,]) * 2
-    ponCntHits <- apply(geno(nvcf)$AD, 1, function(x)
-        sum(!is.na(unlist(x))) / 2)
-
-    tmp <- rowRanges(nvcf)
-    mcols(tmp) <- NULL
-    tmp$bias <- psMappingBias
-    tmp$pon.count <- ponCntHits
-    tmp$mu <- x[5,]
-    tmp$rho <- x[6,]
-    tmp
-}
- 
-.readNormalPanelVcfLarge <- function(vcf, normal.panel.vcf.file,
-    max.file.size=1, geno="AD", expand=FALSE) {
-    genome <- genome(vcf)[1]
-    if (!file.exists(normal.panel.vcf.file)) {
-        .stopUserError("normal.panel.vcf.file ", normal.panel.vcf.file,
-            " does not exist.")
-    }
-    if (file.size(normal.panel.vcf.file) / 1000^3 > max.file.size ||
-        nrow(vcf) < 1000) {
-        flog.info("Scanning %s...", normal.panel.vcf.file)
-        nvcf <- readVcf(TabixFile(normal.panel.vcf.file), genome = genome,
-            ScanVcfParam(which = rowRanges(vcf), info = NA, fixed = NA,
-            geno = geno))
-    } else {
-        flog.info("Loading %s...", normal.panel.vcf.file)
-        nvcf <- readVcf(normal.panel.vcf.file, genome = genome,
-            ScanVcfParam(info = NA, fixed = NA, geno = geno))
-        nvcf <- subsetByOverlaps(nvcf, rowRanges(vcf))
-    }
-    if (expand) nvcf <- expand(nvcf)
-    nvcf
-}
-
-.adjustEmpBayes <- function(x) {
-    # get all SNPs without dramatic bias
-    xg <- x[, x[4, ] > 0.4, drop = FALSE]
-    if (ncol(xg) < 2) {
-        flog.warn("All SNPs in the database have significant mapping bias!%s",
-            " Check your database.")
-        shape1 <- 0
-        shape2 <- 0
-    } else {   
-        # calculate the average number of ref and alt reads per sample
-        shape1 <- sum(xg[1, ]) / sum(xg[3, ])
-        shape2 <- sum(xg[2, ]) / sum(xg[3, ])
-    }
-    # add those as empirical bayes estimate to all SNPs
-    x[1, ] <- x[1, ] + shape1
-    x[2, ] <- x[2, ] + shape2
-    # get the alt allelic fraction for all SNPs
-    apply(x, 2, function(y) y[2] / sum(head(y,2)))
-}
