@@ -14,8 +14,10 @@ option_list <- list(
                 help = "Input: VCF file"),
     make_option(c("--rds"), action = "store", type = "character", default = NULL,
         help = "Input: PureCN output RDS file, used to regenerate plots and files after manual curation"),
+    make_option(c("--mappingbiasfile"), action = "store", type = "character", default = NULL,
+        help = "Input: Mapping bias RDS file, generated by NormalDB.R (or calculateMappingBiasVcf)"),
     make_option(c("--normal_panel"), action = "store", type = "character", default = NULL,
-        help = "Input: VCF containing calls from a panel of normals, for example generated by GATK CombineVariants."),
+        help = "Input: Deprecated, use --mappingbiasfile instead"),
     make_option(c("--normaldb"), action = "store", type = "character", default = NULL,
         help = "Input: NormalDB.rds file. Generated by NormalDB.R."),
     make_option(c("--segfile"), action = "store", type = "character",
@@ -126,7 +128,13 @@ if (opt$version) {
 if (!is.null(opt$seed)) {
     set.seed(opt$seed)
 }
-    
+
+# TODO: remove in 1.20, defunct in 1.18
+if (!is.null(opt$normal_panel) && is.null(opt$mappingbiasfile)) {
+    flog.warn("--normal_panel is deprecated, use --mappingbiasfile instead.")
+    opt$mappingbiasfile <- opt$normal_panel
+}
+
 tumor.coverage.file <- opt$tumor
 normal.coverage.file <- opt[["normal"]]
 snp.blacklist <- opt$snpblacklist
@@ -265,7 +273,7 @@ if (file.exists(file.rds) && !opt$force) {
                 interval.weight.file = opt$intervalweightfile,
                 alpha = opt$alpha, undo.SD = opt$undosd),
             args.setMappingBiasVcf =
-                list(normal.panel.vcf.file = opt$normal_panel),
+                list(mapping.bias.file = opt$mappingbiasfile),
             args.setPriorVcf = list(min.cosmic.cnt = opt$mincosmiccnt),
             normalDB = normalDB, model.homozygous = opt$modelhomozygous,
             min.ploidy = opt$minploidy, max.ploidy = opt$maxploidy,
