@@ -5,8 +5,8 @@
 \title{Set Mapping Bias VCF}
 \usage{
 setMappingBiasVcf(vcf, tumor.id.in.vcf = NULL,
-  normal.panel.vcf.file = NULL, min.normals = 2, smooth = TRUE,
-  smooth.n = 5)
+  mapping.bias.file = NULL, normal.panel.vcf.file = NULL,
+  min.normals = 2, smooth = TRUE, smooth.n = 5)
 }
 \arguments{
 \item{vcf}{\code{CollapsedVCF} object, read in with the \code{readVcf}
@@ -15,18 +15,19 @@ function from the VariantAnnotation package.}
 \item{tumor.id.in.vcf}{Id of tumor in case multiple samples are stored in
 VCF.}
 
-\item{normal.panel.vcf.file}{Combined VCF file of a panel of normals,
-reference and alt counts as AD genotype field. Should be compressed and
-indexed with bgzip and tabix, respectively. One can provide a precomputed
-mapping bias database 
-(obtained by \code{\link{calculateMappingBiasVcf}}).}
+\item{mapping.bias.file}{A precomputed mapping bias database 
+obtained by \code{\link{calculateMappingBiasVcf}}.}
 
-\item{min.normals}{Minimum number of normals with heterozygous SNP for
+\item{normal.panel.vcf.file}{Deprecated, use \code{mapping.bias.file}
+instead.
+reference and alt counts as AD genotype field. Should be compressed and}
+
+\item{min.normals}{Deprecated. Minimum number of normals with heterozygous SNP for
 calculating position-specific mapping bias. Requires
 \code{normal.panel.vcf.file}.}
 
 \item{smooth}{Impute mapping bias of variants not found in the panel by
-smoothing of neighboring SNPs. Requires \code{normal.panel.vcf.file}.}
+smoothing of neighboring SNPs. Requires \code{mapping.bias.file}.}
 
 \item{smooth.n}{Number of neighboring variants used for smoothing.}
 }
@@ -37,13 +38,13 @@ variant in the \code{CollapsedVCF}. Mapping bias is expected as scaling
 factor. Adjusted allelic fraction is (observed allelic fraction)/(mapping
 bias). Maximum scaling factor is 1 and means no bias.}
 \item{pon.count}{A \code{numeric(nrow(vcf))} vector with the number
-of hits in the \code{normal.panel.vcf.file}.}
+of hits in the \code{mapping.bias.file}.}
 \item{shape1, shape2}{Fit of a beta distribution.}
 }
 \description{
 Function to set mapping bias for each variant in the provided
 \code{CollapsedVCF} object. By default, it returns the same value for all
-variants, but a pool of normal samples can be provided for position-specific
+variants, but a mapping bias file can be provided for position-specific
 mapping bias calculation.
 }
 \examples{
